<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InstructionsActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="onHomeClick"
        android:text="Home"
        tools:ignore="MissingConstraints" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <TextView
                android:id="@+id/generalInfoHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/general_information" />

            <TextView
                android:id="@+id/generalInfoBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/this_is_your_user_profile_page_here_you_can_view_information_about_yourself_such_as_your_rating_comments_others_have_made_about_you_and_your_current_listings_if_you_would_like_to_learn_more_about_any_of_the_information_listed_here_please_look_below" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/contactHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_information" />

            <TextView
                android:id="@+id/contactBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/your_user_profile_will_show_basic_information_you_provide_about_yourself_such_as_your_profile_picture_and_your_biography_you_can_always_change_these_at_any_time_using_the_edit_feature" />

            <View
                android:id="@+id/divider2"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/deleteHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" />

            <TextView
                android:id="@+id/deleteBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/use_this_function_to_delete_your_profile_please_note_that_this_cannot_be_undone_so_please_only_use_this_if_you_are_certain_that_you_would_like_to_do_so" />

            <View
                android:id="@+id/divider3"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/homeHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/home" />

            <TextView
                android:id="@+id/homeBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/here_at_the_top_you_can_see_the_most_recent_listings_that_other_users_have_put_on_the_app_at_the_bottom_you_can_go_to_search_for_an_item_view_your_postings_or_go_to_your_profile" />

            <View
                android:id="@+id/divider8"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/listingsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/your_posts" />

            <TextView
                android:id="@+id/listingsBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/here_you_can_view_all_of_your_current_listings_for_items_you_have_posted_you_can_edit_or_delete_them_at_any_point_by_selecting_them" />

            <View
                android:id="@+id/divider4"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/newPostHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/new_post" />

            <TextView
                android:id="@+id/newPostBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/here_you_can_post_an_item_on_our_app_for_trade_or_donation_purposes_as_well_as_request_an_item_to_be_donated_to_you_adding_details_will_make_it_more_likely_that_someone_will_interact_with_your_posts" />

            <View
                android:id="@+id/divider7"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/editPostHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/edit_post" />

            <TextView
                android:id="@+id/editPostBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/here_you_can_edit_a_posting_you_have_already_listed_by_its_attributes_as_well_as_mark_it_completed" />

            <View
                android:id="@+id/divider5"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/editProfHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/edit_profile" />

            <TextView
                android:id="@+id/editProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/here_you_can_change_your_profile_picture_at_the_top_as_well_as_modify_your_description_the_school_you_work_at_your_phone_number_and_email" />

            <View
                android:id="@+id/divider6"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>